--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,35 +1,38 @@
 <resources>
     <string name="app_name">Kard</string>
     <string name="player">Player</string>
+
+    <string name="okay">Okay</string>
+
+    <string name="ai">AI</string>
     <string name="hp">HP</string>
+
     <string name="cards">Cards</string>
+
     <string name="draw_and_attack">Draw and Attack</string>
     <string name="double_damage_attack">Attack with Double Damage</string>
     <string name="attack">Attack</string>
     <string name="block">Block</string>
     <string name="heal">Heal</string>
-    <string name="no_card">No card</string>
-    <string name="roll">Roll</string>
-    <string name="flip">Flip</string>
-    <string name="heads">Heads</string>
-    <string name="tails">Tails</string>
-    <string name="okay">Okay</string>
     <string name="play">Play</string>
-    <string name="coins_matched">Coins matched!</string>
-    <string name="coins_did_not_match">Coins didn\'t match</string>
+
+    <string name="roll">Roll</string>
+    <string name="you_rolled">Your rolled a %1$s!</string>
+
+    <string name="pick_a_coin_face">Pick a coin face</string>
+    <string name="flip">Flip</string>
     <string name="picked">Picked</string>
     <string name="flipped">Flipped</string>
-    <string name="you_rolled">Your rolled a %1$s!</string>
-    <string name="pick_a_coin_face">Pick a coin face</string>
-    <string name="attack_supposed_turn_result">%1$s has queued %2$s damage.</string>
-    <string name="block_supposed_turn_result_successful">%1$s chose to block.</string>
-    <string name="block_supposed_turn_result_failed">%1$s chose to block, but failed.</string>
-    <string name="heal_supposed_turn_result">%1$s chose to heal by %2$s hp.</string>
-    <string name="you_won">You won!</string>
-    <string name="you_lost">You lost!</string>
-    <string name="player_won_text">You have stopped AI from taking over the world… for now.</string>
-    <string name="player_lost_text">You failed to stop AI from taking over the world.</string>
-    <string name="ai">AI</string>
+    <string name="heads">Heads</string>
+    <string name="tails">Tails</string>
+    <string name="coins_matched">Coins matched!</string>
+    <string name="coins_did_not_match">Coins didn\'t match</string>
+
+    <string name="attack_supposed_result">%1$s has queued %2$s damage.</string>
+    <string name="block_supposed_result_successful">%1$s chose to block.</string>
+    <string name="block_supposed_result_failed">%1$s chose to block, but failed.</string>
+    <string name="heal_supposed_result">%1$s chose to heal by %2$s hp.</string>
+
     <string name="attack_attack">%1$s won the duel and dealt %2$s to %3$s.</string>
     <string name="attack_attack_tie">It\'s a tie. No damage. was dealt.</string>
     <string name="attack_block">%1$s has blocked %2$s damage. %3$s has dealt %4$s damage to %5$s.</string>
@@ -37,4 +40,9 @@
     <string name="block_block">Nothing happened.</string>
     <string name="block_heal">%1$s healed by %2$s hp.</string>
     <string name="heal_heal">Both players healed by %1$s hp.</string>
+
+    <string name="you_won">You won!</string>
+    <string name="you_lost">You lost!</string>
+    <string name="player_won_text">You have stopped AI from taking over the world… for now.</string>
+    <string name="player_lost_text">You failed to stop AI from taking over the world.</string>
 </resources>
