AI no longer heals even at full hp.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,10 +33,10 @@
     <string name="block_supposed_result_failed">%1$s chose to block, but failed.</string>
     <string name="heal_supposed_result">%1$s chose to heal by %2$s hp.</string>
 
-    <string name="attack_attack">%1$s won the duel and dealt %2$s to %3$s.</string>
-    <string name="attack_attack_tie">It\'s a tie. No damage. was dealt.</string>
+    <string name="attack_attack">%1$s won the duel and dealt %2$s damage to %3$s.</string>
+    <string name="attack_attack_tie">It\'s a tie. No damage was dealt.</string>
     <string name="attack_block">%1$s has blocked %2$s damage. %3$s has dealt %4$s damage to %5$s.</string>
-    <string name="attack_heal">%1$s\'s healing was canceled. %2$s has dealt %3$s to %4$s</string>
+    <string name="attack_heal">%1$s\'s healing was canceled. %2$s has dealt %3$s damage to %4$s</string>
     <string name="block_block">Nothing happened.</string>
     <string name="block_heal">%1$s healed by %2$s hp.</string>
     <string name="heal_heal">Both players healed by %1$s hp.</string>
