--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Kard</string>
+    <string name="app_name">Karrrrd</string>
     <string name="player">Player</string>
 
     <string name="okay">Okay</string>
@@ -45,4 +45,5 @@
     <string name="you_lost">You lost!</string>
     <string name="player_won_text">You have stopped AI from taking over the world… for now.</string>
     <string name="player_lost_text">You failed to stop AI from taking over the world.</string>
+    <string name="restart">Restart</string>
 </resources>
